<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TrigpointingUK</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh Trigpoint Database</string>
    <string name="action_clearcache">Clear Cache</string>
    <string name="action_exit">Exit</string>
    <string name="action_about">About</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    
    <!-- Auth0 Developer Menu Items -->
    <string name="action_auth0_login">Auth0 Login</string>
    <string name="action_auth0_user">Auth0 User</string>
    <string name="action_auth0_api">Auth0 API</string>
    <string name="action_auth0_logout">Auth0 Logout</string>

    <string name="app_name_version">TrigpointingUK v%1$s (%2$d)</string>
    <string name="build_date">Built on %1$s</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="acknowledgements">Acknowledgements</string>
    <string name="acknowledgements_intro">This application would not be possible without the hard work of many people. Firstly, thanks are due to the many thousands of contributors to the various open-source projects used by this app.  Also to the whole OpenStreetMap community.\n\nAnd huge thanks to our thousands of users, for uploading the hundreds of thousands of logs and photos, that make this site what it is.\n\nIn particular, the TrigpointingUK project would not have been possible without the help of the following…</string>
    <string name="acknowledgements_list">- Brian Deegan
        \n- Adrian Dust
        \n- Ed Fielden
        \n- Jon Glew
        \n- Bernie Hughes
        \n- Barry Hunter
        \n- Martin Lycett
        \n- Chris Ottley
        \n- Geoff Robertshaw
        \n- <b>Mark (The Cat) Thompson</b>
        \n- John Ward
        \n- Rob Woodall
        \n- Graeme Paterson
    </string>


    <string name="downloadIdleStatus">Ready to download</string>

    
    <!-- Missing string resources -->
    <string name="reset">Reset</string>

    <string name="syncToTUK">Syncing to TUK…</string>
    <string name="syncPhotosToTUK">Syncing photos to TUK…</string>
    <string name="syncLogsFromTUK">Syncing logs from TUK…</string>
    <string name="toastPleaseLogin">Please login for a more personalised experience</string>
    
    <!-- Filter related strings -->
    <string name="filterAll">All</string>
    <string name="filterLogged">Logged</string>
    <string name="filterNotLogged">Not Logged</string>
    <string name="filterMarked">Marked</string>
    <string name="filterUnsynced">Unsynced</string>
    
    <!-- Photo related strings -->
    <string name="photoThumb">Photo Thumbnail</string>
    

    

    
    <!-- Missing string resources for various activities -->
    <string name="downloadingPhotos">Downloading photos…</string>
    <string name="noPhotos">No photos available</string>
    <string name="downloadingLogs">Downloading logs…</string>
    <string name="noLogs">No logs available</string>


    <string name="downloadMapsExplanation">The app automatically caches any map tiles that you view whilst online, providing basic offline coverage for areas you\'ve explored.\n\nFor better offline availability, you can bulk download UK-wide maps at various scale ranges below. This ensures comprehensive coverage even when you\'re completely offline.\n\n⚠️ Warning: Some of these files are very large (several hundred MB), so avoid downloading on a metered connection unless necessary.</string>
    <string name="cacheUsageFormat">Cache usage: %1$s</string>
    <string name="clearCache">Clear cache (via Settings)</string>
    <string name="cacheCalculating">Calculating cache size…</string>
    <string name="arView">AR View</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <!-- Menu item strings -->
    <string name="refresh">Refresh</string>
    <string name="directions">Directions</string>
    <string name="browser">Browser</string>

    <string name="map">Map</string>

    

    <string name="byCondition">By Condition</string>
    <string name="none">None</string>
    <string name="byLogged">By Logged</string>
    

    <string name="trigdetails_name">Trigpoint Details</string>


    <string name="title_activity_download_maps">Download Maps</string>
    <string name="title_activity_about">About</string>

    <!-- OS map tab header -->
    <string name="osmap_header">This screen caches a variety of static maps of the area</string>

    <!-- Album tab header -->
    <string name="album_header">Photos taken by TrigpointingUK users</string>

    <!-- Common UI strings -->
    <string name="direction_arrow">Direction arrow</string>
    <string name="distance_zero">0 m</string>
    <string name="distance_accuracy">±0 m</string>
    <string name="bearing_format">Bearing: 000°</string>
    <string name="compass_calibration">Move your phone in a figure-8 to calibrate the compass</string>

    <string name="photo_preview_content_desc">Photo preview</string>


    <string name="photo_icon_content_desc">Photo icon</string>
    <string name="compass_arrow_content_desc">Compass direction arrow</string>
    <string name="log_condition_icon_content_desc">Log condition icon</string>
    <string name="trig_condition_icon_content_desc">Trigpoint condition icon</string>
    <string name="trig_type_icon_content_desc">Trigpoint type icon</string>
    <string name="trig_arrow_content_desc">Direction arrow</string>
    <string name="trig_logged_status_content_desc">Logged status icon</string>

    <!-- Dynamic text strings for Java/Kotlin code -->
    <string name="downloading_status">Downloading…</string>
    <string name="downloaded_status">Downloaded</string>
    <string name="retrying_download">Retrying download now…</string>
    <string name="location_warning_format">Warning: %1$d%2$s from database location</string>
    <string name="location_distance_format">%1$d%2$s from database location</string>
    <string name="getting_gps_fix">Getting accurate GPS fix…</string>
    <string name="logging_in_status">Logging in…</string>
    <string name="login_button_text">Login</string>
    <string name="not_logged_in_status">Not logged in</string>
    <string name="date_user_format">%1$s   %2$s</string>
    
    <!-- Login dialog strings -->
    <string name="login_instructions">Please enter your Trigpointing.UK website credentials. It is not currently possible to create an account using this app, only on the website.</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    
    <!-- Photo metadata dialog strings -->
    <string name="photo_type_label">Photo Type:</string>
    <string name="caption_optional">Caption (optional):</string>
    <string name="caption_hint">Enter a caption for this photo</string>
    <string name="public_domain_photo">Make this photo public domain</string>
    <string name="public_domain_explanation">Public domain photos may be used by anyone for any purpose</string>
    
    <!-- Filter strings -->
    <string name="filter_by_logging_status">Filter by logging status:</string>
    
    <!-- Menu strings -->
    <string name="offline_maps">Offline Maps</string>
    <string name="cache_status">Cache Status</string>
    <string name="clear_cache_menu">Clear Cache</string>
    
    <!-- Map download strings -->
    <string name="map_name_placeholder">Map Name</string>
    <string name="map_description_placeholder">Map description goes here.</string>
    <string name="map_size_format">Size: %1$s MB</string>
    <string name="download_button">Download</string>
    
    <!-- Log photo strings -->
    <string name="photo_thumbnail_desc">Photo Thumbnail</string>
    <string name="photo_name_hint">Photo Name</string>
    <string name="photo_description_hint">Photo Description</string>
    <string name="public_photo">Public Photo</string>
    <string name="save_photo">Save Photo</string>
    <string name="remove_photo">Remove Photo</string>
    
    <!-- Log trig strings -->
    <string name="log_this_trigpoint">Log this trigpoint</string>
    <string name="date_label">Date:</string>
    <string name="time_label">Time:</string>
    <string name="log_time_question">Log time?</string>
    <string name="grid_reference_label">Grid Reference:</string>
    <string name="grid_reference_hint">Grid Reference</string>
    <string name="update_button">Update</string>
    <string name="flush_bracket_hint">Flush Bracket</string>
    <string name="condition_label">Condition:</string>
    <string name="score_label">Score:</string>
    <string name="comment_hint">Comment</string>
    <string name="admin_flag">Admin Flag</string>
    <string name="user_flag">User Flag</string>
    <string name="photos_label">Photos:</string>
    <string name="add_photo">Add Photo</string>
    <string name="delete_log">Delete Log</string>
    <string name="upload_now">Upload Now</string>
    <string name="sync_later">Sync Later</string>
    
    <!-- Main activity strings -->
    <string name="user_label">User: </string>
    <string name="not_logged_in">Not logged in</string>
    <string name="pillars_count">Pillars: 0</string>
    <string name="fbm_count">FBM: 0</string>
    <string name="passive_count">Passive: 0</string>
    <string name="intersected_count">Intersected: 0</string>
    <string name="unsynced_count">Unsynced: 0</string>
    <string name="photos_count">Photos: 0</string>
    <string name="user_activity_map">User activity map</string>
    <string name="nearest_button">Nearest</string>
    <string name="map_button">Map</string>
    <string name="sync_button">Sync</string>
    

    
    <!-- Trigpoint type strings -->
    <string name="select_trigpoint_types">Select trigpoint types to display:</string>
    <string name="pillars_only">Pillars Only</string>
    <string name="pillars_plus_fbm">Pillars + FBM</string>
    <string name="fbm_only">FBM Only</string>
    <string name="passive_stations">Passive Stations</string>
    <string name="intersected_stations">Intersected Stations</string>
    <string name="all_except_intersected">All except Intersected</string>
    <string name="all_types">All Types</string>
    <string name="logged_or_not">Logged or not</string>
    
    <!-- Trig info strings -->
    <string name="mark_trigpoint">Mark this trig point</string>
    <string name="waypoint_label">Waypoint: </string>
    <string name="waypoint_placeholder">TR123</string>
    <string name="condition_label_colon">Condition: </string>
    <string name="condition_good">Good</string>
    <string name="grid_ref_label">Grid Ref: </string>
    <string name="grid_ref_placeholder">SU123456</string>
    <string name="wgs84_label">WGS84: </string>
    <string name="coordinates_placeholder">51.123, -1.456</string>
    <string name="current_label">Current: </string>
    <string name="current_yes">Yes</string>
    <string name="historic_label">Historic: </string>
    <string name="historic_no">No</string>
    <string name="type_label">Type: </string>
    <string name="type_pillar">Pillar</string>
    <string name="flush_bracket_label">Flush Bracket: </string>
    <string name="flush_bracket_unknown">Unknown</string>
    <string name="view_on_map">View on map</string>
    <string name="list_nearby_trigpoints">List nearby trigpoints</string>
    
    <!-- Trig list strings -->
    <string name="location_unknown">Location: Unknown</string>
    <string name="filter_all">Filter: All</string>
    <string name="direction_north">N</string>
    
    <!-- Trig album row strings -->
    <string name="photo_name_placeholder">Photo name</string>
    <string name="date_by_user">Date by User</string>
    <string name="photo_description_placeholder">Photo description</string>
    
    <!-- Trig details strings -->
    <string name="type_content_desc">Type</string>
    <string name="condition_content_desc">Condition</string>
    
    <!-- Menu action strings -->
    <string name="open_on_website">Open on trigpointing.uk</string>
    <string name="navigate_to_trigpoint">Navigate to trigpoint</string>

    <string name="guide_me_compass">Guide me (compass)</string>
    
    <!-- Trig row strings -->
    <string name="trig_name_placeholder">Trig Name</string>
    <string name="distance_format">0.0km</string>
    
    <!-- Trig log row strings -->
    <string name="log_entry_text">Log entry text</string>
    
    <!-- Trig logs strings -->
    <string name="no_logs_available">No logs available</string>
    
    <!-- Menu strings -->
    <string name="refresh_maps">Refresh maps</string>
    
    <!-- AR activity strings -->
    <string name="ar_arrow_left">\&lt;\&gt;</string>
    <string name="ar_arrow_right">\&gt;\&lt;</string>

</resources>
