...
            android:text="@string/location_unknown"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <!-- Filter text -->
        <TextView
            android:id="@+id/trigListHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/filter_all"
            android:textSize="16sp"
            android:textColor="@color/black"
...
        </LinearLayout>

    </LinearLayout>

    <!-- List view for trigs -->
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout> 
