...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <!-- Pillar count -->
            <TextView
                android:id="@+id/countPillarText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/ic_pillar_large"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/pillars_count" />
...
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/btnNearest"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/nearest_button"
                android:textSize="16sp"
                android:layout_marginEnd="4dp"
...
