...
	<string name="downloadBlurb">When you first install this app, and every now and then afterwards, you need to download a full set of trigpoint data from the TrigpointingUK.com server.  This data is stored on your phone, so that you can search for trigpoints even when out of phone reception.</string>
	<string name="downloadStatus">Status: </string>
	<string name="downloadIdleStatus">idle</string>
	<string name="downloadInsertStatus">Connecting to T:UK</string>
	<string name="btnDownload">Download</string>
	<string name="btnDownloadFinished">Done</string>
	<string name="btnCancel">Cancel</string>
	<string name="nearest_all">All</string>
	<string name="help_about">About</string>
	<string name="colourScheme">Icon colourscheme</string>
	<string name="downloadMapsTitle">Download Offline Maps</string>
	<string name="downloadMapsBlurb">If you have a slow or expensive mobile internet connection, you may download a set of maps for the whole of the UK when convenient, to minimise the amount of map downloads in the field.  These are large files, so please ensure you have enough space on your SD card, and that you have a fast, cheap internet connection.</string>
	<string name="downMaps">Download Offline Maps</string>
...
